--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <br><br>
         <div id="output"></div>
     </div>
-
+    <script src="whizzHTTP.js"></script> 
     <script src="app.js"></script> 
 </body>
 </html>
